--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "trade-wars-static",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Carson-Key/trade-wars-static",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.1.1",
@@ -15,6 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
