--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@inlet/react-pixi": "^1.1.9",
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.1.1",
+    "js-cookie": "^2.2.1",
     "pixi.js": "^5.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
